* New configuration option "MaximumStorageCacheSize" to configure the size of
  the new storage cache.
* New configuration option "ZipLoaderThreads" to configure the number of threads used
  to read instances from storage when createing a Zip archive/media.
* Support decoding of black-and-white images (with 1 bit per pixel), notably DICOM SEG

Maintenance
-----------

* Fix handling of option "DeidentifyLogs", notably for tags (0010,0010) and (0010,0020)
* New configuration options:
  - "DicomThreadsCount" to set the number of threads in the embedded DICOM server
* Fix instances accumulating in DB while their attachments were not stored because of 
  MaximumStorageSize limit reached with a single patient in DB.

REST API
--------

* API version upgraded to 16
* If an image can not be decoded, ../preview and ../rendered routes are now returning 
  unsupported.png only if the ?returnUnsupportedImage option is specified; otherwise, 
  it raises a 415 error code.
* Archive jobs response now contains a header Content-Disposition:filename='archive.zip'
* "/instances/{...}/frames/{...}/numpy": Download the frame as a Python numpy array
* "/instances/{...}/numpy": Download the instance as a Python numpy array
* "/series/{...}/numpy": Download the series as a Python numpy array

Lua
---

* New "ReceivedCStoreInstanceFilter" Lua callback to filter instances received
  through C-Store and return a specific C-Store status code.

Plugins
-------

* New function in the SDK: OrthancPluginRegisterIncomingCStoreInstanceFilter()


Version 1.9.7 (2021-08-31)
==========================

General
-------

* New configuration option "DicomAlwaysAllowMove" to disable verification of
  the remote modality in C-MOVE SCP

REST API
--------

* API version upgraded to 15
* Added "Level" option to POST /tools/bulk-modify
* Added missing OpenAPI documentation of "KeepSource" in ".../modify" and ".../anonymize"

Maintenance
-----------

* Added file CITATION.cff