@@ -252,7 +252,7 @@
               <li data-icon="star"><a href="#" id="patient-anonymize">Anonymize</a></li>
             </ul>
 
-            <ul data-role="listview" data-inset="true" data-theme="d" data-divider-theme="c">
+            <ul data-role="listview" data-inset="true" data-theme="d" data-divider-theme="c" id="patient-access">
               <li data-role="list-divider">Access</li>
               <li data-icon="info" data-theme="e" style="display:none">
                 <a href="#" id="patient-anonymized-from">Before anonymization</a>
@@ -306,7 +306,7 @@
               <li data-icon="star"><a href="#" id="study-anonymize">Anonymize</a></li>
             </ul>
 
-            <ul data-role="listview" data-inset="true" data-theme="d" data-divider-theme="c">
+            <ul data-role="listview" data-inset="true" data-theme="d" data-divider-theme="c" id="study-access">
               <li data-role="list-divider">Access</li>
               <li data-icon="info" data-theme="e" style="display:none">
                 <a href="#" id="study-anonymized-from">Before anonymization</a>
@@ -361,7 +361,7 @@
               <li data-icon="star"><a href="#" id="series-anonymize">Anonymize</a></li>
             </ul>
 
-            <ul data-role="listview" data-inset="true" data-theme="d" data-divider-theme="c">
+            <ul data-role="listview" data-inset="true" data-theme="d" data-divider-theme="c" id="series-access">
               <li data-role="list-divider">Access</li>
               <li data-icon="info" data-theme="e" style="display:none">
                 <a href="#" id="series-anonymized-from">Before anonymization</a>
@@ -417,7 +417,7 @@
               <li data-icon="forward"><a href="#" id="instance-store">Send to DICOM modality</a></li>
             </ul>
 
-            <ul data-role="listview" data-inset="true" data-theme="d" data-divider-theme="c">
+            <ul data-role="listview" data-inset="true" data-theme="d" data-divider-theme="c" id="instance-access">
               <li data-role="list-divider">Access</li>
               <li data-icon="info" data-theme="e" style="display:none">
                 <a href="#" id="instance-anonymized-from">Before anonymization</a>
